Fixed tables overflowing from container

--- a/ensembl_production/static/css/db_copy.css
+++ b/ensembl_production/static/css/db_copy.css
@@ -44,3 +44,10 @@
 .btn {
   margin-bottom: 15px;
 }
+.table{
+  table-layout:fixed;
+}
+.table-break-all
+{
+  word-break: break-all;
+}
